spartan-hub/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spartan-hub
  labels:
    name: spartan-hub
    app: spartan-hub
