spartan-hub/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
  namespace: spartan-hub
spec:
  selector:
    app: redis-cluster
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  clusterIP: None
